<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="login" translatable="false">Login</string>
    <string name="Username" translatable="false">Username</string>
    <string name="Password" translatable="false">Password</string>
    <string name="remember" translatable="false">Remember me?</string>
    <string name="name" translatable="false">Full name</string>
    <string name="Email" translatable="false">Email</string>
    <string name="Phone" translatable="false">Phone number</string>
    <string name="REGISTER" translatable="false">REGISTER</string>
    <string name="Search" translatable="false">Search</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


</resources>