<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Login">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="50dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/txtlogin"
        />
    <EditText
        android:layout_below="@+id/txtlogin"
        android:id="@+id/edtUser"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:hint="@string/Username"
        />

    <EditText
        android:layout_below="@+id/edtUser"
        android:id="@+id/edtPass"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"/>
    <CheckBox
        android:layout_below="@+id/edtPass"
        android:id="@+id/saveLoginCheckBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember" />
    <LinearLayout
        android:layout_below="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btnDangKy"
            android:layout_width="145dp"
            android:layout_height="45dp"
            android:text="@string/REGISTER"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/btnDangNhap"
            android:layout_width="145dp"
            android:layout_height="45dp"
            android:text="@string/login"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            />

    </LinearLayout>
    </LinearLayout>

</RelativeLayout>